Added Token Authentication

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=satcalc.db"
-  }
+  },
+  "TokenKey" : "This is my token key"
 }
