Starting on routing

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=satcalc.db"
+    "DefaultConnection":"Data source=DatingAppSQLite.db"
   },
   "TokenKey" : "This is my token key"
 }
