--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "web-animations-js": "^2.3.2",
